fixed right click menu on IOS

--- a/foodle/global.css
+++ b/foodle/global.css
@@ -1,5 +1,5 @@
 *, *::before, *::after {
-	touch-action: manipulation;	margin: 0;
+	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 	transition: background-color 0.2s ease;
@@ -30,7 +30,7 @@
 	--border-secondary: #272729;
 	--bg-secondary: #1a1a1b;
 	--bg-primary: #121213;
-	
+	--red: #9C2323;
 	--color-present: #b59f3b;
 	--color-correct: #538d4e;
 	--color-absent: var(--border-primary);
@@ -48,7 +48,7 @@ body { height: 100% }
 	--border-secondary: var(--border-primary);
 	--bg-secondary: #e0e0e0;
 	--bg-primary: #ffffff;
-
+	--red: #C42C2C;
 	--color-present: #c9b458;
 	--color-correct: #6aaa64;
 	--color-absent: var(--fg-secondary);
